<resources>
    <string name="app_name">CookedApp</string>

    <string name="enter_invitee_email_address">Enter an email address and hit the button below to send an invitation</string>

    <!-- Navigation drawer sections -->
    <string name="nav_section_view_edit_my_profile">View/Edit My Profile</string>
    <string name="nav_section_view_all_groups">View All Groups</string>
    <string name="nav_section_create_new_group">Create A New Group</string>
    <string name="nav_section_view_faq">View FAQ</string>
    <string name="nav_section_about_this_app">About Declare Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="parse_app_id">BrndBVrRczElKefgG3TvjCk3JYxtd5GB2GMzKoEP</string>
    <string name="parse_client_key">Xb7Pcc0lT2I3uJYNNoT6buaCuZ9dcvBMtCx9U5gw</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <!-- Cloud Code functions-->
    <string name="cloud_code_get_user_status_within_group">getUserStatusForGroup</string>
    <string name="cloud_code_send_invite_to_individual_user">inviteToGroup</string>
    <string name="cloud_code_approve_membership_for_group">approveMembershipForGroup</string>
    <string name="cloud_code_request_membership_to_group">requestMembershipToGroup</string>
    <string name="cloud_code_accept_membership_to_group">acceptMembershipToGroup</string>


    <string name="title_activity_nonsenseactivity">nonsenseactivity</string>
    <string name="title_activity_post_login">PostLoginActivity</string>

    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_about_this_app">About Declare Home</string>

    <string name="hello_world">Hello world!</string>

    <string name="hello_wellness">Hello wellness!</string>
    <string name="hello_groups">Hello groups!</string>
    <string name="hello_events">Hello events!</string>
    <string name="title_activity_create_group">CreateGroupActivity</string>

    <string name="invite_members">Invite Members</string>

    <string name="enter_all_info_below">Enter all info below to start a new group</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_purpose">Group Purpose</string>
    <string name="neighberhoods_areas_districts">Neighberhoods/Areas/Districts of focus</string>
    <string name="group_street_address">Group Street Address</string>
    <string name="city">City</string>
    <string name="state_province_territory_department">State/Province/Territory/Department</string>
    <string name="group_website">http://www.groupwebsite.com</string>
    <string name="facebook_page">Group\'s facebook page</string>
    <string name="twitter_name">\@groupsTwitterHandle</string>
    <string name="add_email_address">Add email address</string>
    <string name="send_invitation">Send Invitation</string>

    <!-- Broadcast Notification Constants Strings -->
    <string name="broadcast_force_refresh_groups">RefreshGroupsListIntent</string>
    <string name="broadcast_group_saved_success">GroupSavedIntent</string>
    <string name="title_activity_group_details">GroupDetailsActivity</string>
    <string name="broadcast_message_saved_success">MessageSavedIntent</string>
    <string name="title_activity_invite_members">InviteMembersActivity</string>
    <string name="title_activity_message_wall">MessageWallActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_groups_list">GroupsListActivity</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="title_activity_edit_user_details">EditUserDetailsActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_intro_slides">IntroSlidesActivity</string>

</resources>
