<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wisecityllc.cookedapp.activities.CreateGroupActivity"
    android:orientation="vertical"
    android:paddingLeft="10dp">



    <TextView android:text="@string/enter_all_info_below"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.wisecityllc.cookedapp.activities.CreateGroupActivity"
            android:orientation="vertical">
        <EditText
            android:id="@+id/create_group_group_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_name"
            android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/create_group_group_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_purpose"
            android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/create_group_neighberhoods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/neighberhoods_areas_districts"
            android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/create_group_group_street_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_street_address"
            android:layout_marginTop="4dp" />

        <EditText
            android:id="@+id/create_group_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/create_group_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state_province_territory_department"
            android:layout_marginTop="4dp" />

        <EditText
            android:id="@+id/create_group_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_website"
            android:layout_marginTop="4dp" />

        <EditText
            android:id="@+id/create_group_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/facebook_page"
            android:layout_marginTop="4dp" />

        <EditText
            android:id="@+id/create_group_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/twitter_name"
            android:layout_marginTop="4dp"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/create_group"
                android:id="@+id/create_group_done_button" />

        </LinearLayout>



    </ScrollView>



</LinearLayout>
